@@ -115,7 +115,6 @@ textarea {
     margin: 1%;
     border: 2px solid black;
     border-radius: 10px;
-    overflow: hidden;
 }
 
 /* ------------------------------ Periodic Table ------------------------------ */
