@@ -185,14 +185,16 @@ public class EFACIntroCanvas extends PhetPCanvas implements Resettable {
         double burnerHeight = burnerWidth * 0.8;
         double burnerOpeningHeight = burnerHeight * 0.2;
         double burnerYPosTweak = -10; // Empirically determined for best look.
-        HeaterCoolerView leftHeaterCooler = new HeaterCoolerView( model.getLeftBurner().heatCoolLevel, true, "Heat", true, "Cool", burnerWidth, burnerHeight, burnerOpeningHeight );
+        HeaterCoolerView leftHeaterCooler = new HeaterCoolerView( model.getLeftBurner().heatCoolLevel, true, "Heat", true, "Cool",
+                                                                  burnerWidth, burnerHeight, burnerOpeningHeight, model.getLeftBurner().energyChunkList, mvt );
         leftHeaterCooler.setOffset( mvt.modelToViewX( model.getLeftBurner().getOutlineRect().getCenterX() ) - leftHeaterCooler.getHoleNode().getFullBounds().getWidth() / 2,
                                     mvt.modelToViewY( model.getLeftBurner().getOutlineRect().getMinY() ) - leftHeaterCooler.getFrontNode().getFullBounds().getHeight() - burnerYPosTweak );
         backLayer.addChild( leftHeaterCooler.getHoleNode() );
         backLayer.addChild( new BurnerStandNode( mvt.modelToView( model.getLeftBurner().getOutlineRect() ).getBounds2D(), burnerProjectionAmount ) );
         heaterCoolerFrontLayer.addChild( leftHeaterCooler.getFrontNode() );
 
-        HeaterCoolerView rightHeaterCooler = new HeaterCoolerView( model.getRightBurner().heatCoolLevel, true, "Heat", true, "Cool", burnerWidth, burnerHeight, burnerOpeningHeight );
+        HeaterCoolerView rightHeaterCooler = new HeaterCoolerView( model.getRightBurner().heatCoolLevel, true, "Heat", true, "Cool",
+                                                                   burnerWidth, burnerHeight, burnerOpeningHeight, model.getRightBurner().energyChunkList, mvt );
         rightHeaterCooler.setOffset( mvt.modelToViewX( model.getRightBurner().getOutlineRect().getCenterX() ) - rightHeaterCooler.getHoleNode().getFullBounds().getWidth() / 2,
                                     mvt.modelToViewY( model.getRightBurner().getOutlineRect().getMinY() ) - rightHeaterCooler.getFrontNode().getFullBounds().getHeight() - burnerYPosTweak );
         backLayer.addChild( rightHeaterCooler.getHoleNode() );
